fix: Remove text align property on main paragraph

--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -6,7 +6,6 @@
 }
 
 .paragraph {
-  text-align: justify;
   font-size: 1.25rem;
   line-height: 1.25;
   hyphens: auto;
